overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,9 +10,11 @@
   html {
     @apply overflow-x-hidden  focus-within:scroll-smooth;
   }
-  /* body {
-    @apply w-screen min-h-screen max-w-[1440px]  mx-auto bg-bgColor text-textColor py-2 sm:py-4 px-4 lg:px-6 xl:px-8 flex flex-col
-  } */
+
+  /* avoid vw or screen to reduce overflow */
+  body {
+    @apply w-full min-h-full max-w-[1440px]  mx-auto bg-bgColor text-textColor py-2 sm:py-4 px-4 lg:px-6 xl:px-8 flex flex-col ;
+  } 
   ul,
   ol {
     @apply list-none;
